Add script to launch Code with corret PATH variable to make environment cross-platform

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,7 +10,7 @@
             "request": "launch",
             "target": "${fileDirname}/${fileBasenameNoExtension}.bin",
             "cwd": "${fileDirname}",
-            "gdbpath": "C:/ence461/tool-chain/gcc-arm-none-eabi-9-2019-q4/bin/arm-none-eabi-gdb.exe",
+            "gdbpath": "arm-none-eabi-gdb",
             "autorun": [
                 "target remote localhost:3333",
                 "symbol-file ${fileDirname}/${fileBasenameNoExtension}.bin",
