--- a/doc/guide/Makefile
+++ b/doc/guide/Makefile
@@ -1,6 +1,6 @@
 all: guide.pdf
 
-%.pdf: %.tex hardware.tex software.tex troubleshooting.tex debugging.tex openocd.tex assessment.tex git.tex requirements.tex PCB.tex schematic.tex rework.tex schedule.tex firstprogram.tex testprograms.tex
+%.pdf: %.tex hardware.tex software.tex troubleshooting.tex debugging.tex openocd.tex assessment.tex git.tex requirements.tex PCB.tex schematic.tex rework.tex schedule.tex firstprogram.tex testprograms.tex sleeping.tex EMC.tex
 	pdflatex -shell-escape $<
 	pdflatex -shell-escape $<
 
