--- a/src/test-apps/ledtape_test2/Makefile
+++ b/src/test-apps/ledtape_test2/Makefile
@@ -1,8 +1,8 @@
 DRIVERS = pacer ledtape
 
-TARGET = ledtape-test1.bin
+TARGET = ledtape_test2.bin
 OPT = -O2
 
-SRC = ledtape-test1.c
+SRC = ledtape_test2.c
 
 include ../../boards/board.mk
