Trweak panic module

--- a/src/test-apps/adc_usb_serial_test2/Makefile
+++ b/src/test-apps/adc_usb_serial_test2/Makefile
@@ -1,11 +1,8 @@
 PERIPHERALS = adc
-DRIVERS = usb_serial pacer
+DRIVERS = usb_serial pacer panic
 
 TARGET = adc_usb_serial_test2.bin
 
 SRC = adc_usb_serial_test2.c
 
 include ../../boards/board.mk
-
-
-
