Added working motor.c and motor.h to racer, added TODO list, fixed led tape, added control method to interpret recieved values and gains

--- a/src/apps/racer/Makefile
+++ b/src/apps/racer/Makefile
@@ -1,8 +1,8 @@
-PERIPHERALS = pit
-DRIVERS =
+PERIPHERALS = pit pwm
+DRIVERS = led pacer usb_serial panic
 TARGET = racer.bin
 
-SRC = racer.c
+SRC = racer.c motors.c motors.h
 
 # Use low level of optimisation to simplify debugging
 OPT = -O1
