Added IMU decoder to convert raw to a range of 0-20. Radion now sends 3 bytes - byte 1 = 0-20 linear - byte 2  = 0-20 angular byte 3 = dastradly stuff. 10 is in resting position.

--- a/src/apps/hat/Makefile
+++ b/src/apps/hat/Makefile
@@ -1,5 +1,5 @@
 PERIPHERALS = pit adc
-DRIVERS = pacer usb_serial mpu9250 panic
+DRIVERS = pacer usb_serial mpu9250 panic nrf24 
 TARGET = hat.bin
 
 SRC = hat.c app_imu.c app_radio.c app_gpio.c app_pwm.c app_adc.c
