Moved Init to expecte files and removed init.c

--- a/src/apps/hat/Makefile
+++ b/src/apps/hat/Makefile
@@ -2,7 +2,7 @@ PERIPHERALS = pit adc spi
 DRIVERS = pacer usb_serial mpu9250 panic nrf24 
 TARGET = hat.bin
 
-SRC = hat.c app_imu.c app_radio.c app_gpio.c app_pwm.c app_adc.c app_init.c
+SRC = hat.c app_imu.c app_radio.c app_gpio.c app_pwm.c app_adc.c
 
 # Use low level of optimisation to simplify debugging
 OPT = -O1
