Tidied up code, abstracted modules.

--- a/src/apps/racer/Makefile
+++ b/src/apps/racer/Makefile
@@ -2,7 +2,7 @@ PERIPHERALS = pit pwm
 DRIVERS = led pacer usb_serial panic nrf24 
 TARGET = racer.bin
 
-SRC = racer.c motors.c motors.h
+SRC = racer.c motors.c motors.h usb_racer.c usb_racer.h
 
 # Use low level of optimisation to simplify debugging
 OPT = -O1
