working uni directional radio

--- a/src/apps/racer/Makefile
+++ b/src/apps/racer/Makefile
@@ -1,8 +1,8 @@
-PERIPHERALS = pit pwm
-DRIVERS = led pacer usb_serial panic nrf24 
+PERIPHERALS = pit pwm spi adc
+DRIVERS = led pacer usb_serial panic nrf24 ledtape
 TARGET = racer.bin
 
-SRC = racer.c motors.c motors.h usb_racer.c usb_racer.h
+SRC = racer.c motors.c motors.h usb_racer.c usb_racer.h racer_pio.c racer_pio.h radio.c radio.h
 
 # Use low level of optimisation to simplify debugging
 OPT = -O1
